--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -7,14 +7,12 @@
 
 /* ----------------BOX DE FILTROS-------------- */
 
-.g-3{ 
-    margin:  50px 50px;
+.g-3, .table{ 
+    margin-top: 50px !important;
+    width: 90%;
+    margin: auto;
     border: 1px solid var(--bs-border-color);
     border-radius: 12px;
     padding: 20px;
-}
-
-#tabela-consulta {
-    margin: 50px;
 }
 
