--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,14 +13,16 @@
 }
 
 #container-tabela{
+    padding-top: 0px !important;
     text-align: center;
     display: none;
 }
 
 .table{
-    vertical-align: baseline;
+    vertical-align: middle;
     text-align: center;
 }
+
 
 .g-3, #container-tabela{ 
     margin-top: 50px !important;
@@ -30,4 +32,27 @@
     border-radius: 12px;
     padding: 20px;
 }
+
+#data-tag{
+    margin: 20px 10px;
+    font-weight: bold;
+}
+
+.btn{ 
+    border: none;
+    transition: all 300ms;
+}
+
+.btn-primary:hover{
+    color: #0d6efd;
+}
+
+.btn-danger:hover{
+    color: #dc3545;
+}
+
+.btn:hover,.btn-danger:hover{
+    background: transparent;
+}
+
 
