FUNC_CADASTRO_RESERVA_V1

--- a/assets/styles/cadastrar_reserva.css
+++ b/assets/styles/cadastrar_reserva.css
@@ -1,1 +1,13 @@
+#sala-dados {
 
+    margin-bottom: 20px;
+}
+
+.input-cadastrar-turma{
+
+    margin-bottom: 10px;
+}
+
+.row-btn-check{
+    margin-bottom: 20px;
+}
