--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -14,7 +14,7 @@
 
 #container-tabela{
     padding-top: 0px !important;
-    text-align: center;
+    /* text-align: center; */
     display: none;
 }
 
@@ -54,5 +54,6 @@
 .btn:hover,.btn-danger:hover{
     background: transparent;
 }
+
 
 
