--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,7 +1,9 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;    
+    box-sizing: border-box;
+    
+    /* border: 1px solid black; */
 }
 
 body{
@@ -59,6 +61,19 @@ body{
     background: transparent;
 }
 
+/* MODAL ===============*/
+
+.modal-content{
+    background-color: rgb(248, 249, 250);
+}
+
+.modal-header{
+    padding-bottom:2px;
+}
+.modal-header,.modal-footer{
+    border: none;
+}
+
 
 
 
@@ -71,29 +86,44 @@ body{
 
 /* MODAIS EDITAR E CADASTRAR RESERVA */
 
-#sala-dados {
-    margin-bottom: 20px;
+.modal-dados{
+    border: 1px solid #dee2e6;
+    border-radius: 0.375rem;
+    padding: 10px;
+    height: 100%;
+    background-color: #fff;
 }
 
-.inp-dados-turma{
+#sala-dados {
+    /* margin-bottom: 20px; */
+}
 
-    margin-bottom: 10px;
+.inp-cadastrar-turma, .inp-editar-turma{
+    margin-top: 10px;
 }
 
 .row-btn-check{
-    margin-bottom: 20px;
+    margin: 20px;
 }
 
-#turma-dados{
+#turma-dados-cadastrar{
+    background-color: #e9ecef;
+    height: 100%;
+
+}
+
+#turmas-dados-editar{
+    min-height: 200px;
+    margin-top: 10px;
+    background-color: #fff;
+}
+.turma-dados{
     border-radius: 0.375rem;
     border: 1px solid #dee2e6;
-    margin-top: 10px;
     padding: 10px;
-    height: 66%;
-    background-color: #e9ecef;
 }
 
-#turma-dados p{
+.turma-dados p{
     margin: 0;
     text-align: left;
 }
@@ -101,6 +131,10 @@ body{
 .edit-del-turma{
 
     margin-top: 20px;
+}
+
+.col-turma-dados{
+    padding-top: 10px;
 }
 
 
