--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,14 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
     /* border: 1px solid black; */
 }
-
-body{
-    /* min-height:1800px ; */
-}
-
 
 /* ----------------BOX DE FILTROS-------------- */
 
@@ -110,6 +104,11 @@ body{
     background-color: #e9ecef;
     height: 100%;
 
+}
+#reserva-datas{
+    overflow: auto;
+    white-space: nowrap;
+    padding: 1px;
 }
 
 #turmas-dados-editar{
