--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,9 +8,6 @@
 /* ----------------BOX DE FILTROS-------------- */
 
 
-#container-tabela{
-    visibility: hidden;
-}
 
 .table{
     vertical-align: middle;
@@ -18,15 +15,25 @@
     --bs-table-bg: none;
 }
 
-.g-3, #container-tabela{
+.form-consulta, #container-tabela{
     background-color: rgba(var(--bs-light-rgb), 1);
     margin-top: 50px !important;
     width: 90%;
     margin: auto;
     border: 1px solid var(--bs-border-color);
     border-radius: 12px;
+}
+
+.form-consulta{
     padding: 30px;
 }
+
+#container-tabela{
+    padding: 0px 20px;
+    visibility: hidden;
+}
+
+
 /* BOTOES =========================================== */
 
 .btn{ 
@@ -82,6 +89,9 @@
     background-color: #fff;
 }
 
+.inp-editar-turma{
+    padding: 0px;
+}
 
 .inp-cadastrar-turma, .inp-editar-turma{
     margin-top: 10px;
