--- a/assets/styles/cadastrar_reserva.css
+++ b/assets/styles/cadastrar_reserva.css
@@ -2,7 +2,7 @@
     justify-content: center;
     min-height: 40px;
     width: 100%;
-    border-radius: 12px;
+    border-radius: .6rem;
     overflow: hidden;
     align-items: center;
     border: 1px solid var(--bs-border-color);
